# SlashmadPanoStitch

./: .gitignore  README.md  pyproject.toml  run-panostitch.sh
docs/: architecture.md  competitive-analysis.md  lens-data.md
examples/presets/: sigma-15mm-a7r3-horizontal-edge.json
requirements/: desktop.txt
scripts/: bootstrap_local_env.py
src/panostitch/: __main__.py
src/panostitch/core/: batch_plan.py  exporter.py  fisheye_math.py  panorama_preview_cache.py  panorama_stitch.py  preset_store.py  render_backend.py  render_pipeline.py  runtime_paths.py
src/panostitch/data/: lens_db.json
src/panostitch/domain/: models.py
src/panostitch/io/: image_loader.py  lens_db.py  profile_catalog.py
src/panostitch/ui/: app.py  detached_preview_window.py  export_progress_dialog.py  export_worker.py  main_window.py  panorama_progress_dialog.py  panorama_worker.py  preview_canvas.py  preview_worker.py  resettable_slider.py  theme.py
tests/: test_fisheye_math.py  test_image_loader.py  test_lens_db.py  test_panorama_stitch.py  test_render_pipeline.py
